--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
     height: 100vh;
     background-size: cover;
-    background-image: url('/background/png/BG.png');
+    background-image: url('background/png/BG.png');
 }
 
 .box {
@@ -56,7 +56,7 @@ body {
         /* transform: rotateY(180deg); */
     }
     51% {
-        /* right: 0; */
+        right: 0;
         /* transform: rotateY(180deg); */
     }
     100% {
@@ -68,7 +68,7 @@ body {
 #bats{
     width: 300px;
     height: 300px;
-    background-image: url('/img/bat__000.png');
+    background-image: url('img/bat__000.png');
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 6;
