--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body {
     height: 100vh;
     background-size: cover;
-    background-image: url('background/png/BG.png');
+    background-image: url('/img/bgimg.jpg');
 }
 
 .box {
@@ -53,22 +53,30 @@ body {
     }
     50% {
         left: calc(100vw - 100px);
-        /* transform: rotateY(180deg); */
+        
     }
-    51% {
-        right: 0;
-        /* transform: rotateY(180deg); */
-    }
-    100% {
-        left: 0;
+    51%{
         transform: rotateY(180deg);
+
+
+    }
+    99%{
+        transform: rotateY(100vw - 100px);
+
+    }
+    
+ 
+    100% {
+        transform: rotateY(0);
+        left: 0;
+       
     }
 }
 
 #bats{
     width: 300px;
     height: 300px;
-    background-image: url('img/bat__000.png');
+    background-image: url('/img/bat__000.png');
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 6;
