--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,10 @@
 
 body {
     height: 100vh;
+    width: 100%;
     background-size: cover;
-    background-image: url('/img/bgimg.jpg');
+    background-image: url('/img/bg2.png');
+
 }
 
 .box {
@@ -52,25 +54,32 @@ body {
         left: 0;
         transform: rotateY(0);
     }
-    50% {
-        left: calc(100vw - 100px);
+    100% {
+        left: 100%;
         
     }
-    51%{
-        transform: rotateY(180deg);
+    /* 51%{
+        transform:translateY(180deg)
 
-
+    } */
+        
+   
+}
+#zombi2{
+    /* background-image: url(/img/Walk\ \(1\).png); */
+    animation-name: zombi2Run;
+    animation-duration: 8s;
+    animation-iteration-count: infinite;
+    z-index: 1;
+    transform: rotateY(180deg);
+}
+@keyframes zombi2Run{
+    0% {
+        right:0;
     }
-    99%{
-        transform: rotateY(100vw - 100px);
-
-    }
-    
- 
     100% {
-        transform: rotateY(0);
-        left: 0;
-       
+        right: 100%;
+        
     }
 }
 
