--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
     height: 100vh;
     width: 100%;
     background-size: cover;
-    background-image: url('/img/bg2.png');
+    /* background-image: url('/img/bg2.png'); */
 
 }
 
@@ -86,7 +86,7 @@ body {
 #bats{
     width: 300px;
     height: 300px;
-    background-image: url('/img/bat__000.png');
+    background-image: url('/img/bat.png');
     background-size: cover;
     background-repeat: no-repeat;
     z-index: 6;
