--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,6 @@ body {
 #zombi{
     animation-name: zombiRun;
     animation-duration: 10s;
-    /* background-color: red; */
     animation-iteration-count: infinite;
     z-index: 1;
 }
@@ -167,7 +166,6 @@ body {
 }
 
 .marks{
-    width: 100%;
     height: 80px;
     border-radius: 10px;
     /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#f0b7a1+0,8c3310+36,752201+58,bf6e4e+100 */
@@ -177,7 +175,11 @@ body {
     background: linear-gradient(to bottom,  #f0b7a1 0%,#8c3310 36%,#752201 58%,#bf6e4e 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f0b7a1', endColorstr='#bf6e4e',GradientType=0 ); /* IE6-9 */
     z-index: 201;
-    padding-left: 300px;
+    padding-top: 20px;
+    display: flex;
+
+
+
 
     
 }
@@ -189,18 +191,27 @@ body {
     font-family: 'Bungee Outline', cursive;
     font-weight: bold;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
-   top: 10px;
+    
    
-  
-
 }
 
 button{
     width: 100px;
     height: 40px;
     border-radius: 10px;
-    background-color: yellow;
+    /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#606c88+0,3f4c6b+49,606c88+72 */
+    background: #606c88; /* Old browsers */
+    background: -moz-linear-gradient(top,  #606c88 0%, #3f4c6b 49%, #606c88 72%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #606c88 0%,#3f4c6b 49%,#606c88 72%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #606c88 0%,#3f4c6b 49%,#606c88 72%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#606c88', endColorstr='#606c88',GradientType=0 ); /* IE6-9 */
+
     border: 1px solid burlywood;
+}
+#scoreBord-win{
+    font-family: 'Times New Roman', Times, serif;    
+    background-color: aqua;
+    
 }
