--- a/css/home.css
+++ b/css/home.css
@@ -1,11 +1,18 @@
 *{
     box-sizing: border-box;
 }
-body{
-    background-image: url(/img/BG.png);
+
+#back-ground{
+
+    height: 100vh;
+    width: 100%;
+    background-image: url(/img/BG.jpeg);
+    /* background-repeat: no-repeat; */
+    background-size: cover;
+    
 }
 button{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: 'Times New Roman', Times, serif;
     width: 620px;
     height: 60px;
     border-radius: 15px;
