Start page create

--- a/css/home.css
+++ b/css/home.css
@@ -6,7 +6,7 @@
 
     height: 100vh;
     width: 100%;
-    background-image: url(/img/BG.jpeg);
+    background-image: url(/img/imgbG.jpg);
     /* background-repeat: no-repeat; */
     background-size: cover;
     
