--- a/css/home.css
+++ b/css/home.css
@@ -6,9 +6,9 @@
 
     height: 100vh;
     width: 100%;
-    background-image: url(/img/imgbG.jpg);
+    /* background-image: url(/img/imgbG.jpg); */
     /* background-repeat: no-repeat; */
-    background-size: cover;
+    /* background-size: cover; */
     
 }
 button{
