--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,14 @@
 *{
     box-sizing: border-box;
 }
+body {
+    height: 100vh;
+    width: 100%;
+    background-size: cover;
+    position:absolute;
+    /* background-image: url('/img/bg2.png'); */
+
+}
 
 #back-ground{
 
